// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`in blockchain mode renders correctly block is invalid (index: 2) 1`] = `
<DocumentFragment>
  .c1 {
  color: #f00;
}

.c0.c0.c0 {
  font-weight: bold;
}

<form
    aria-label="Block Statistics"
    class="mt-3"
  >
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c0 input-group-text"
        >
          Nonce
        </span>
      </div>
      <input
        aria-label="Block Nonce"
        class="form-control"
        disabled=""
        name="nonce"
        type="number"
        value="0"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c0 input-group-text"
        >
          Header
        </span>
      </div>
      <input
        aria-label="Block Header"
        class="form-control"
        disabled=""
        name="header"
        type="number"
        value="0"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c0 input-group-text"
        >
          Target
        </span>
      </div>
      <input
        aria-label="Block Target"
        class="text-truncate form-control"
        name="target"
        readonly=""
        type="text"
        value=""
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c0 input-group-text"
        >
          Sol'n
        </span>
      </div>
      <input
        aria-label="Block Solution Invalid"
        class="c1 text-truncate form-control"
        name="solution"
        readonly=""
        type="text"
        value=""
      />
    </div>
    <button
      aria-label="Block Mine"
      class="btn-block p-1 btn btn-primary"
      type="button"
    >
      <h4
        class="my-0 row justify-content-end align-items-center flex-nowrap"
      >
        <span
          class="col-10 pl-5"
        >
          Mine
        </span>
        <div
          class="mr-3 invisible spinner-border"
          role="status"
        >
          <span
            class="sr-only"
          >
            Loading...
          </span>
        </div>
      </h4>
    </button>
  </form>
</DocumentFragment>
`;

exports[`in blockchain mode renders correctly block is valid (index: 0) 1`] = `
<DocumentFragment>
  .c1 {
  color: #008000;
}

.c0.c0.c0 {
  font-weight: bold;
}

<form
    aria-label="Block Statistics"
    class="mt-3"
  >
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c0 input-group-text"
        >
          Nonce
        </span>
      </div>
      <input
        aria-label="Block Nonce"
        class="form-control"
        disabled=""
        name="nonce"
        type="number"
        value="0"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c0 input-group-text"
        >
          Header
        </span>
      </div>
      <input
        aria-label="Block Header"
        class="form-control"
        disabled=""
        name="header"
        type="number"
        value="0"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c0 input-group-text"
        >
          Target
        </span>
      </div>
      <input
        aria-label="Block Target"
        class="text-truncate form-control"
        name="target"
        readonly=""
        type="text"
        value=""
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c0 input-group-text"
        >
          Sol'n
        </span>
      </div>
      <input
        aria-label="Block Solution"
        class="c1 text-truncate form-control"
        name="solution"
        readonly=""
        type="text"
        value=""
      />
    </div>
    <button
      aria-label="Block Mine"
      class="btn-block p-1 btn btn-primary"
      disabled=""
      type="button"
    >
      <h4
        class="my-0 row justify-content-end align-items-center flex-nowrap"
      >
        <span
          class="col-10 pl-5"
        >
          Mine
        </span>
        <div
          class="mr-3 invisible spinner-border"
          role="status"
        >
          <span
            class="sr-only"
          >
            Loading...
          </span>
        </div>
      </h4>
    </button>
  </form>
</DocumentFragment>
`;

exports[`in preview mode renders correctly 1`] = `
<DocumentFragment>
  .c1 {
  color: #f00;
}

.c0.c0.c0 {
  font-weight: bold;
}

<form
    aria-label="Block Statistics"
    class="col-11 col-lg-5 mx-3 mb-2 mb-lg-0 bg-dark px-2 pb-2 rounded"
  >
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c0 input-group-text"
        >
          Nonce
        </span>
      </div>
      <input
        aria-label="Block Nonce"
        class="form-control"
        disabled=""
        name="nonce"
        type="number"
        value="0"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c0 input-group-text"
        >
          Header
        </span>
      </div>
      <input
        aria-label="Block Header"
        class="form-control"
        disabled=""
        name="header"
        type="number"
        value="0"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c0 input-group-text"
        >
          Target
        </span>
      </div>
      <input
        aria-label="Block Target"
        class="text-truncate form-control"
        name="target"
        readonly=""
        type="text"
        value=""
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="c0 input-group-text"
        >
          Sol'n
        </span>
      </div>
      <input
        aria-label="Block Solution Invalid"
        class="c1 text-truncate form-control"
        name="solution"
        readonly=""
        type="text"
        value=""
      />
    </div>
    <button
      aria-label="Block Mine"
      class="btn-block p-1 btn btn-primary"
      type="button"
    >
      <h4
        class="my-0 row justify-content-end align-items-center flex-nowrap"
      >
        <span
          class="col-10 pl-5"
        >
          Mine
        </span>
        <div
          class="mr-3 invisible spinner-border"
          role="status"
        >
          <span
            class="sr-only"
          >
            Loading...
          </span>
        </div>
      </h4>
    </button>
  </form>
</DocumentFragment>
`;
